Add install command

--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -28,7 +28,10 @@ jobs:
     steps:
       - checkout
       # Run your orb's commands to validate them.
-      - phylum-orb/greet
+      - phylum-orb/install
+      - run:
+          name: Verify Installation
+          command: phylum --version
 workflows:
   test-deploy:
     jobs:
