Remove review job

--- a/src/commands/install.yml
+++ b/src/commands/install.yml
@@ -4,4 +4,4 @@ description: >
 steps:
   - run:
       name: Install CLI
-      command: <<include(scripts/greet.sh)>>
+      command: <<include(scripts/install.sh)>>
