Add Phylum analysis job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ workflows:
       - orb-tools/continue:
           pipeline_number: << pipeline.number >>
           vcs_type: << pipeline.project.type >>
-          orb_name: phylum-orb
+          orb_name: phylum
           requires:
             - orb-tools/lint
             - orb-tools/pack
