--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -4,7 +4,7 @@ orbs:
   # Reference your orb's jobs and commands below as they will exist when built.
   orb-tools: circleci/orb-tools@12.0
   # The orb definition is intentionally not included here. It will be injected into the pipeline.
-  phylum-orb: {}
+  phylum: {}
 
 # Use this tag to ensure test jobs always run,
 # even though the downstream publish job will only run on release tags.
@@ -28,10 +28,6 @@ jobs:
     steps:
       - checkout
       # Run your orb's commands to validate them.
-      - phylum-orb/install
-      - run:
-          name: Verify Installation
-          command: phylum --version
 workflows:
   test-deploy:
     jobs:
@@ -39,16 +35,19 @@ workflows:
       # Test your orb's commands in a custom job and test your orb's jobs directly as a part of this workflow.
       - command-test:
           filters: *filters
+      - phylum/analyze:
+          filters: *filters
       # The orb must be re-packed for publishing, and saved to the workspace.
       - orb-tools/pack:
           filters: *release-filters
       - orb-tools/publish:
-          orb_name: phylum-dev/phylum-orb
+          orb_name: phylum-dev/phylum
           vcs_type: << pipeline.project.type >>
           pub_type: production
           # Ensure this job requires all test jobs and the pack job.
           requires:
             - orb-tools/pack
             - command-test
+            - phylum/analyze
           context: orb-publishing
           filters: *release-filters
