Add set-head step

--- a/src/jobs/analyze.yml
+++ b/src/jobs/analyze.yml
@@ -12,6 +12,9 @@ parameters:
 steps:
   - checkout
   - run:
+      name: Set Head
+      command: git remote set-head origin --auto
+  - run:
       name: Print Phylum version
       command: phylum --version
   - run:
