--- a/src/jobs/analyze.yml
+++ b/src/jobs/analyze.yml
@@ -14,8 +14,8 @@ steps:
   - run:
       name: Set Head
       command: >
-        apt-get update;
-        apt-get install openssh-client;
+        apt-get -y update;
+        apt-get -y install openssh-client;
         git remote set-head origin --auto;
   - run:
       name: Print Phylum version
