--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,15 +1,10 @@
 version: 2.1
 
 description: >
-  Sample orb description
-# What will your orb allow users to accomplish?
-# Descriptions should be short, simple, and informative.
+  Phylum blocks software supply chain attacks. Automate software supply chain
+  security to contextualize risks, block attacks and only use open-source code
+  that you trust.
 
-# This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://github.com/phylum-dev/phylum-orb"
+  home_url: "https://app.phylum.io"
   source_url: "https://github.com/phylum-dev/phylum-orb"
-
-# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
