Cleanup CI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,10 @@ workflows:
           filters: *filters
       - orb-tools/pack:
           filters: *filters
-#     - orb-tools/review:
-#         filters: *filters
+      - orb-tools/review:
+         filters: *filters
       - shellcheck/check:
           filters: *filters
-      # Triggers the next workflow in the Orb Development Kit.
       - orb-tools/continue:
           pipeline_number: << pipeline.number >>
           vcs_type: << pipeline.project.type >>
@@ -27,6 +26,6 @@ workflows:
           requires:
             - orb-tools/lint
             - orb-tools/pack
-#           - orb-tools/review
+            - orb-tools/review
             - shellcheck/check
           filters: *filters
